--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,15 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.7.8/angular.min.js" charset="utf-8"></script>
+
+        <!-- Disable browser back button cuz it messes with AngularJS -->
+        <script type="text/javascript">
+            history.pushState(null, null, location.href);
+            window.onpopstate = function() {
+                history.go(1);
+            };
+        </script>
+
         <script src="./js/app.js" charset="utf-8"></script>
 
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
